--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "epsilon-sample-app"
+name = "game-of-life-numworks"
 version = "0.1.0"
 authors = ["NumWorks <contact@numworks.com>"]
 edition = "2018"
